--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -40,6 +40,7 @@
      <string>Result</string>
     </property>
     <addaction name="actionShowRuby"/>
+    <addaction name="actionSynthesize"/>
    </widget>
    <widget class="QMenu" name="menuTools">
     <property name="title">
@@ -68,6 +69,11 @@
   <action name="actionPreference">
    <property name="text">
     <string>Preference</string>
+   </property>
+  </action>
+  <action name="actionSynthesize">
+   <property name="text">
+    <string>Synthesize</string>
    </property>
   </action>
  </widget>
