--- a/speechdialog.ui
+++ b/speechdialog.ui
@@ -50,6 +50,13 @@
       <number>5</number>
      </property>
      <item>
+      <widget class="QPushButton" name="pushButtonSave">
+       <property name="text">
+        <string>Save to Wave</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QToolButton" name="toolButtonPlay">
        <property name="text">
         <string>P</string>
