Update from windows.

--- a/preferencedialog.ui
+++ b/preferencedialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Preference</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="1" column="0">
@@ -58,7 +58,7 @@
        <item row="1" column="0">
         <widget class="QLabel" name="labelPathUserDict">
          <property name="text">
-          <string>UserDictDir:</string>
+          <string>UserDictFile:</string>
          </property>
         </widget>
        </item>
