--- a/speechdialog.ui
+++ b/speechdialog.ui
@@ -71,6 +71,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QSlider" name="horizontalSlider">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
