--- a/speechdialog.ui
+++ b/speechdialog.ui
@@ -27,7 +27,7 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QWebView" name="webView">
+    <widget class="QWebEngineView" name="webEngineView">
      <property name="url">
       <url>
        <string>about:blank</string>
@@ -96,9 +96,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>QWebView</class>
+   <class>QWebEngineView</class>
    <extends>QWidget</extends>
-   <header>QtWebKitWidgets/QWebView</header>
+   <header>QtWebEngineWidgets/QWebEngineView</header>
   </customwidget>
  </customwidgets>
  <resources/>
